# beepbot-macos

./: .gitignore  CLAUDE.md  Dockerfile  beepbot.mjs  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: app.tsx  index.css
documents/: session-2026-03-11.md
extensions/beep-bridge/: background.js  content.js  manifest.json
scripts/: stop.mjs
server/: package.json  pnpm-lock.yaml
server/src/: admin-usage.ts  agent-runtime.ts  agent.ts  auth.ts  background-tasks.ts  browser-bridge.ts  db.ts  file-watcher.ts  identity.ts  index.ts  ipc.ts  memory-system.ts  memory.ts  scheduler.ts  skills.ts  stt.ts  vault.ts
server/tests/: memory-system.test.sh
sidecar/: package.json  pnpm-lock.yaml
sidecar/src/: agent-runtime.ts  agent.ts  auth.ts  crypto.ts  db.ts  file-watcher.ts  identity.ts  index.ts  ipc.ts  memory-system.ts  scheduler.ts  tts.ts  usage-tracker.ts  workspace.ts
src/: app.tsx  chat-view.tsx  index.css  input-bar.tsx  message.tsx  status-bar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ask-user-modal.tsx  conversation-list.tsx  hal-eye.tsx  settings-overlay.tsx  sub-agent-detail-panel.tsx  sub-agent-tabs.tsx  voice-overlay.tsx
src/hooks/: use-agent.ts  (+1 more)
test-script/: README.md  test-admin-usage.mjs  test-chat.mjs  test-compaction.mjs  test-cpi.mjs  test-models.mjs  test-tokens.mjs  test-voice.mjs  test-ws-events.mjs
(+76 files in other folders)
